# lumen

./: .gitignore  Cargo.toml  README.md
lumen-core/: Cargo.toml  README.md
lumen-core/src/: dynamic.rs  error.rs  iter.rs  layout.rs  lib.rs  op.rs  range.rs  scalar.rs  shape.rs  storage.rs  tensor.rs  utils.rs  variable.rs
lumen-core/src/backprop/: global.rs  gradmeta.rs  mod.rs  op.rs  test.rs
lumen-core/src/backward/: imple.rs  mod.rs
lumen-core/src/dtype/: bf16.rs  bool.rs  f32.rs  f64.rs  i16.rs  i32.rs  i8.rs  mod.rs  u16.rs  u32.rs  u8.rs  usize.rs
lumen-core/src/dynamic/: float.rs  integer.rs  mod.rs
lumen-core/src/grad/: backprop.rs  meta.rs  mod.rs  op.rs  store.rs  test.rs
lumen-core/src/op/: backprop.rs  grad.rs  gradmeta.rs  gradstore.rs  mod.rs  test.rs
lumen-core/src/tensor/: arith.rs  boolean.rs  broadcast.rs  condition.rs  construct.rs  convert.rs  display.rs  fused.rs  indexer.rs  iter.rs  matmul.rs  mod.rs  reduce.rs  shape.rs
lumen-dataset/: Cargo.toml  README.md
lumen-dataset/src/: batcher.rs  dataloader.rs  error.rs  lib.rs  utils.rs
lumen-dataset/src/base/: batcher.rs  dataloader.rs  dataset.rs  memory.rs  mod.rs
lumen-dataset/src/common/: mod.rs
lumen-dataset/src/core/: iter.rs  mod.rs
lumen-dataset/src/core/transform/: map.rs
lumen-dataset/src/datasets/: mod.rs
lumen-dataset/src/datasets/common/: iris.rs  jsonl.rs  mod.rs  vec.rs
lumen-dataset/src/datasets/tabular/: iris.rs
lumen-dataset/src/datasets/vision/: mnist.rs
lumen-dataset/src/transform/: map.rs  mod.rs  selection.rs
lumen-dataset/src/vision/: mnist.rs  mod.rs
lumen-examples/fl_dtree_tcp/: Cargo.toml
lumen-examples/fl_dtree_tcp/src/: lib.rs
lumen-examples/hands-on-rl/: Cargo.toml  README.md
lumen-examples/hands-on-rl/chapters/: ch02_bernoulli_bandit.rs  ch05_temporal_difference.rs  ch07_dqn.rs  ch09_reinforce.rs  ch10_actor_critic.rs
lumen-examples/hands-on-rl/src/: lib.rs  replay.rs  utils.rs
lumen-examples/hands-on-rl/src/env/: cart_pole.rs  mod.rs
lumen-examples/minimind/: Cargo.toml  README.md
lumen-examples/minimind/src/: lib.rs  pretrain.rs
lumen-examples/minimind/src/dataset/: mod.rs  pretrain.rs  rlai.rs  sft.rs  types.rs
lumen-examples/minimind/src/model/: config.rs  cross_entropy.rs  mod.rs  modeling.rs
lumen-examples/minimind/src/tokenizer/: chat_template.rs  encode.rs  mod.rs
lumen-examples/minimind/src/trainer/: ppo.py  ppo.rs  ppo_token.py  pretrain.rs
lumen-examples/rev_number/: Cargo.toml  attention.rs  pointer.rs  seq2seq.py  seq2seq.rs
lumen-io/: Cargo.toml  README.md
lumen-io/bench/: generate.py  test1.safetensors
lumen-io/src/: lib.rs  npy.rs  safetensors.rs  utils.rs
lumen-macros/: Cargo.toml  README.md
lumen-macros/src/: lib.rs  module.rs  utils.rs
lumen-macros/src/module/: common.rs  eenum.rs  mod.rs  sstruct.rs
lumen-nn/: Cargo.toml  README.md
lumen-nn/python/: nn.py
lumen-nn/src/: error.rs  functional.rs  init.rs  lib.rs
lumen-nn/src/activation/: gelu.rs  leaky_relu.rs  mod.rs  relu.rs  sigmoid.rs  softmax.rs  tanh.rs
lumen-nn/src/criterion/: cross_entropy.rs  l1.rs  mod.rs  mse.rs
lumen-nn/src/function/: mod.rs
lumen-nn/src/functional/: activate.rs  common.rs  loss.rs  mod.rs  norm.rs
lumen-nn/src/init/: init.rs  mod.rs
lumen-nn/src/loss/: cross_entropy.rs  l1.rs  mse.rs
lumen-nn/src/model/: argmax.rs  gcn.rs  linear.rs  logsoftmax.rs  mlp.rs  mod.rs  rnn.rs  sigmoid.rs  softmax.rs
lumen-nn/src/modules/: buffer.rs  dropout.rs  embedding.rs  linear.rs  mod.rs  param.rs  softmax.rs
lumen-nn/src/modules/activation/: gelu.rs  gelu_erf.rs  leaky_relu.rs  mod.rs  recip.rs  relu.rs  sigmoid.rs  silu.rs  tanh.rs
lumen-nn/src/modules/attention/: gqa.rs  mha.rs  mod.rs  self_attn.rs
lumen-nn/src/modules/common/: dropout.rs  embedding.rs  flatten.rs  linear.rs  mod.rs  softmax.rs
lumen-nn/src/modules/geometric/: gcnconv.rs  mod.rs
lumen-nn/src/modules/loss/: cross_entropy.rs  l1.rs  mod.rs  mse.rs  nll.rs
lumen-nn/src/modules/norm/: batch.rs  layer.rs  mod.rs  rms.rs
lumen-nn/src/modules/rnn/: gru.rs  lstm.rs  mod.rs  rnn.rs
lumen-nn/src/optim/: adam.rs  adamw.rs  mod.rs  momentum.rs  sgd.rs
lumen-python/: Cargo.toml  README.md  pyproject.toml
lumen-python/examples/: logic_gate.py  mnist.py
lumen-python/lumen/: __init__.py  __init__.pyi  lumen.pyi
lumen-python/lumen/data/: dataloader.py
lumen-python/lumen/dataset/: dataloader.py  dataset.py
lumen-python/lumen/dataset/datasets/: __init__.py  mnist.py
lumen-python/lumen/io/: __init__.py  __init__.pyi
lumen-python/lumen/nn/: __init__.py  __init__.pyi
lumen-python/lumen/nn/functional/: __init__.py  __init__.pyi
lumen-python/lumen/nn/modules/: __init__.py  activate.py  container.py  dropout.py  embedding.py  linear.py  loss.py  module.py  softmax.py
lumen-python/lumen/nn/optim/: __init__.py  adam.py  adamw.py  optimizer.py  rmsprop.py  sgd.py  sgdmomentum.py
lumen-python/src/: core.rs  dataset.rs  lib.rs  nn.rs
lumen-python/src/core/: grad.rs  mod.rs  tensor.rs
lumen-python/src/io/: mod.rs  npy.rs  safetensors.rs
lumen-python/src/nn/: functional.rs  init.rs  mod.rs  param.rs
lumen-python/tests/: test_core.py  test_dataset.py  test_nn.py
lumen-tokenize/: Cargo.toml  README.md  Tokenzier分析.md
lumen-tokenize/src/: lib.rs  types.rs
lumen-tokenize/src/components/: mod.rs
lumen-tokenize/src/components/model/: bpe.rs  mod.rs
lumen-tokenize/src/components/pre_tokenize/: mod.rs  whitesapce.rs
lumen-tokenize/src/tokenizer/: error.rs  mod.rs
lumen-transformer/: Cargo.toml  README.md
lumen-transformer/examples/: gpt2.rs  qwen2.rs
lumen-transformer/script/: download_gpt2.sh  download_qwen2.sh
lumen-transformer/src/: lib.rs  sampler.rs
lumen-transformer/src/base/: mod.rs  sampler.rs  tokenize.rs
lumen-transformer/src/models/: mod.rs
lumen-transformer/src/models/deepseek/: config.rs  error.rs  mod.rs  modeling.rs
lumen-transformer/src/models/gpt2/: config.rs  error.rs  modeling.rs
lumen-transformer/src/models/llama/: config.rs  error.rs  mod.rs  modeling.rs
(+44 files in other folders)
