[workspace]
members = [
    "lumen-core", 
    "lumen-nn", 
    "lumen-macros",
    "lumen-dataset",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
repository = "https://github.com/MoleSir/lumen.git"
description = "A tiny ML framework"
keywords = ["machine-learning", "auto-grad"]
license = "MIT"

[workspace.dependencies]
lumen-core = { path = "./lumen-core", package = "lumen-core" }
lumen-nn = { path = "./lumen-nn", package = "lumen-nn" }
lumen-macros = { path = "./lumen-macros", package = "lumen-macros" }
lumen-dataset = { path = "./lumen-dataset", package = "lumen-dataset" }

approx = "0.5.1"
derive_builder = "0.20.2"
num-traits = "0.2.19"
rand = "0.9.2"
rand_distr = "0.5.1"
tempfile = "3.21.0"
thiserror = "2.0.16"
paste = "1.0.15"
libm = "0.2.15"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
proc-macro-crate = "3.3"
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] } # alloc is for no_std, derive is needed
serde_json = { version = "1.0", default-features = false }
