[workspace]
members = [
    "lumen-core", 
    "lumen-io",
    "lumen-nn", 
    "lumen-macros",
    "lumen-dataset",
    "lumen-tokenize", 
    "lumen-transformer", 
    "lumen-python",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
repository = "https://github.com/MoleSir/lumen.git"
description = "A tiny ML framework"
keywords = ["machine-learning", "auto-grad"]
license = "MIT"

[workspace.dependencies]
lumen-core = { path = "./lumen-core", package = "lumen-core", version = "0.5.0" }
lumen-io = { path = "./lumen-io", package = "lumen-io", version = "0.5.0" }
lumen-nn = { path = "./lumen-nn", package = "lumen-nn", version = "0.5.0" }
lumen-macros = { path = "./lumen-macros", package = "lumen-macros", version = "0.5.0" }
lumen-dataset = { path = "./lumen-dataset", package = "lumen-dataset", version = "0.5.0" }
lumen-tokenize = { path = "./lumen-tokenize", package = "lumen-tokenize", version = "0.5.0" }
lumen-transformer = { path = "./lumen-transformer", package = "lumen-transformer", version = "0.5.0" }
lumen-python = { path = "./lumen-python", package = "lumen-python", version = "0.5.0" }

half = "2.3"
approx = "0.5.1"
derive_builder = "0.20.2"
num-traits = "0.2.19"
rand = "0.9.2"
rand_distr = "0.5.1"
tempfile = "3.21.0"
thiserror = "2.0"
thiserrorctx = "1.0"
paste = "1.0.15"
libm = "0.2.15"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
proc-macro-crate = "3.3"
serde = "1.0"
serde_json = "1.0"
dirs = "6.0"
reqwest = "0.12"
indicatif = "0.18"
flate2 = "1.1"
memmap2 = "0.9.9"
derive-new = "0.7"
bytemuck = "1.23.2"
zip = "4.5.0"
futures-core = "0.3.32"
async-stream = "0.3.6"