[package]
name = "lumen-core"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[dependencies]
approx = { workspace = true }
num-traits = { workspace = true }
paste = "1.0.15"
rand = { workspace = true }
rand_distr = { workspace = true }
thiserror = { workspace = true }
