[package]
name = "lumen-core"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[dependencies]
approx = { workspace = true }
libm = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
thiserrorctx = { workspace = true }
thiserror = { workspace = true }