[package]
name = "lumen-io"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[dependencies]
lumen-core = { workspace = true }
thiserrorctx = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
memmap2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }