[package]
name = "lumen-macros"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
proc-macro-crate = { workspace = true }