[package]
name = "lumen-nn"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = "1.0.98"
approx = "0.5.1"
lumen-core = { workspace = true }
