[project]
name = "lumen"
requires-python = ">=3.10"
authors = [
  { name = "MoleSir", email = "iamnotabu@gamil.com" },
]
dynamic = ["description", "license", "readme", "version"]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"


[tool.maturin]
python-source = "."
bindings = "pyo3"
features = ["pyo3/extension-module"]