[package]
name = "lumen-tokenize"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }