[package]
name = "fl_dtree_tcp"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "client" 
path = "bin/client.rs"


[[bin]]
name = "server" 
path = "bin/server.rs"


[[bin]]
name = "runner" 
path = "bin/runner.rs"


[dependencies]
lumen-core = { path = "../../lumen-core" }
lumen-dataset = { path = "../../lumen-dataset" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"